# Autonomous-Deep-Research-Agent

./: .gitignore  README.md  pyproject.toml
reports/: Harness Engineering.md
src/: deep_research_advanced.ipynb  duckduckgo_mcp_server.py
