[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "chromadb>=1.5.9",
    "comm>=0.2.3",
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "mcp>=1.28.1",
    "nest-asyncio>=1.6.0",
]
